--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "dist/**/*.d.ts",
     "dist/**/*.js",
     "docs/**/*"
-  ]
+  ],
+  "directories": {
+    "lib": "dist",
+    "doc": "docs"
+  }
 }
