--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     // "esModuleInterop": true,
     // "forceConsistentCasingInFileNames": true,
     // "strict": true,
-    // "skipLibCheck": true
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts",
