--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2016",
+    "target": "ES2017",
     "module": "commonjs",
     "outDir": "dist",
     "declaration": true,
@@ -11,9 +11,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts",
-    "typing",
-    "node_modules/zotero-types",
-  ]
+  "include": ["src/**/*.ts", "typing", "node_modules/zotero-types"]
 }
