--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
     "lib": "dist",
     "doc": "docs"
   },
-  "prettier": {
-    "endOfLine": "crlf"
-  },
+  "prettier": {},
   "devDependencies": {
     "@microsoft/api-documenter": "^7.21.5",
     "@microsoft/api-extractor": "^7.34.4",
