fix: #26 UITool memory leak

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
+    "lib": ["ESNext", "DOM"],
     "module": "commonjs",
     "outDir": "dist",
     "declaration": true,
