fix: npm publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - run: npm install
+      - run: npm run build
       - run: npm publish && npm run release -- --no-increment --no-git --github.release --ci --VV
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
