--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "prettier": "2.8.8",
     "react-intl": "^6.6.8",
     "release-it": "^15.11.0",
-    "typescript": "^5.5.2",
-    "unbuild": "^2.0.0"
+    "typescript": "^5.5.2"
   },
   "publishConfig": {
     "access": "public",
