chore: bump all deps

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,16 +15,29 @@ jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
-      - run: npm install
-      - run: npm run build
-      - run: npm publish && npm run release -- --no-increment --no-git --github.release --ci --VV
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Publish to npm
+        run: npm publish --provenance &&
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
+      - name: Sync to GitHub Release
+        run: npm run release -- --no-increment --no-git --github.release --ci --VV
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
