ci: fix publish commend

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run build
 
       - name: Publish to npm
-        run: npm publish --provenance &&
+        run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
