--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "prepare": "husky",
     "update-deps": "npm update --save"
   },
-  "dependencies": {
-    "zotero-types": "^2.2.0"
+  "peerDependencies": {
+    "zotero-types": "^3.0.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
-    "@microsoft/api-documenter": "^7.25.17",
-    "@microsoft/api-extractor": "^7.47.9",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@antfu/eslint-config": "^3.12.1",
+    "@microsoft/api-documenter": "^7.26.3",
+    "@microsoft/api-extractor": "^7.48.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/react-intl": "^3.0.0",
-    "eslint": "^9.12.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "react-intl": "^6.7.0",
-    "release-it": "^17.7.0",
-    "typescript": "^5.6.2"
+    "eslint": "^9.17.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
+    "react-intl": "^6.8.9",
+    "release-it": "^17.11.0",
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public",
