--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "typings", "node_modules/zotero-types"]
+  "include": ["src/**/*.ts", "node_modules/zotero-types"]
 }
