--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zotero-plugin-toolkit",
   "type": "module",
-  "version": "4.0.15",
+  "version": "4.0.16-0",
   "description": "Toolkit for Zotero plugins",
   "author": "windingwind",
   "license": "MIT",
