--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "update-deps": "npm update --save"
   },
   "peerDependencies": {
-    "zotero-types": "^3.1.0"
+    "zotero-types": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
-    "@microsoft/api-documenter": "^7.26.3",
-    "@microsoft/api-extractor": "^7.48.1",
+    "@microsoft/api-documenter": "^7.26.18",
+    "@microsoft/api-extractor": "^7.52.2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-intl": "^3.0.0",
