--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ESNext", "DOM"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "types": ["zotero-types/entries/mainWindow"],
     "strict": true,
     "declaration": true,
     "declarationMap": true,
@@ -13,5 +14,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "node_modules/zotero-types"]
+  "include": ["src/**/*.ts"]
 }
