--- a/package.json
+++ b/package.json
@@ -45,9 +45,6 @@
     "prepare": "husky",
     "update-deps": "npm update --save"
   },
-  "peerDependencies": {
-    "zotero-types": ">=4.0.0"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
     "@microsoft/api-documenter": "^7.26.27",
@@ -60,7 +57,8 @@
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "release-it": "^17.11.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zotero-types": ">=4.0.0"
   },
   "publishConfig": {
     "access": "public",
