--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zotero-plugin-toolkit",
   "type": "module",
-  "version": "5.1.0-2",
+  "version": "5.1.0-beta.0",
   "description": "Toolkit for Zotero plugins",
   "author": "windingwind",
   "license": "MIT",
@@ -71,5 +71,6 @@
   "prettier": {},
   "lint-staged": {
     "*.{ts,js,css}": "prettier --write"
-  }
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
