fix: add build step before publishing npm package

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
       - run: npm install
 
       - run: |
+          npm run build
           VERSION=$(node -p "require('./package.json').version")
           if [[ "$VERSION" == *-* ]]; then
             npm publish --tag beta
