feat!: export ZoteroToolkit only in `/ztoolkit`

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "developer",
     "toolkit"
   ],
+  "sideEffects": false,
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
+    ".": "./dist/index.js",
+    "./ztoolkit": "./dist/ztoolkit.js",
+    "./package.json": "./package.json"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
